# minos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  disk.img
.cargo/: config  config.toml
dsk/ini/: banner.txt  boot.sh  version.txt
dsk/var/www/: index.html
run/: bochs.sh  cool-retro-term.sh  moros-fuse.py  moros-fuse.sh  virtualbox.sh
src/: lib.rs  main.rs
src/api/: base64.rs  hex.rs  mod.rs  prompt.rs  random.rs  syscall.rs  unit.rs  user.rs
src/api/io/: console.rs  fs.rs  mod.rs
src/api/time/: clock.rs  mod.rs
src/lib/: mod.rs
src/lib/device/: mod.rs
src/lib/device/disk/: ata.rs
src/lib/device/io/: mod.rs  ps2.rs  serial.rs  vga.rs
src/lib/fs/: mod.rs  mount.rs
src/lib/gdt/: mod.rs
src/lib/interrupts/: idt.rs  mod.rs  pic.rs
src/lib/memory/: mod.rs
src/lib/memory/allocate/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/lib/panic/: mod.rs
src/sys/: acpi.rs  allocator.rs  keyboard.rs  mod.rs  process.rs  random.rs
src/sys/device/: mod.rs  serial.rs
src/sys/device/disk/: ata.rs
src/sys/device/io/: console.rs  mod.rs  ps2.rs  serial.rs  vga.rs
src/sys/fs/: block_device.rs  device.rs  dir.rs  mod.rs  super_block.rs
src/sys/interrupts/: idt.rs  mod.rs
src/sys/memory/: allocator.rs  mem.rs  mod.rs
src/sys/net/: mod.rs
src/sys/net/nic/: pcnet.rs  rtl8139.rs
src/sys/net/socket/: tcp.rs  udp.rs
src/sys/syscall/: service.rs
src/sys/time/: clock.rs  cmos.rs  mod.rs
src/test/: infra.rs  mod.rs  tests.rs
src/test/tests/: alloc.rs  idt.rs  vga.rs
src/usr/: beep.rs  calc.rs  chess.rs  copy.rs  date.rs  delete.rs  dhcp.rs  disk.rs  editor.rs  elf.rs  env.rs  find.rs  hash.rs  help.rs  hex.rs  host.rs  http.rs  httpd.rs  install.rs  keyboard.rs  life.rs  list.rs  memory.rs  move.rs  net.rs  pci.rs  pi.rs  pow.rs  read.rs  shell.rs  socket.rs  tcp.rs  time.rs  user.rs  vga.rs  write.rs
src/usr/lisp/: eval.rs  mod.rs  primitive.rs
src/usr/shell/: cat.rs  cd.rs  install.rs  list.rs  mod.rs  time.rs  unix_core.rs
tools/: disk_create.py
