[package]
name = "minos"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-curses", "-drive", "format=raw,file={}"]