[package]
name = "minos"
version = "0.1.0"
authors = ["werdl <werdl_is_cool@outlook.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false, features = ["alloc"] }


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"] # if on a codespace or a terminal-only, add the "-curses" flag to the qemu command
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33 # magic number, resolves to 0 on the host
test-timeout = 300 # 5 minutes (just in case the kernel hangs, or bootloader fails to load it, etc.)
